--- a/hibernate-learnings/pom.xml
+++ b/hibernate-learnings/pom.xml
@@ -19,6 +19,14 @@
   </properties>
 
   <dependencies>
+  <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>6.1.5.Final</version>
+    <type>pom</type>
+</dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
